// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-astronomy: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Atlas-Bridge II records a phase shift each time the failed terraforming biosphere passes through. The failed terraforming biosphere drifts the baselines Atlas-Bridge V relies on. The industrial mirror swarm failure introduces a measurable perturbation in Atlas-Bridge III. Atlas-Bridge III carries Atlas-Bridge III - Moon I Hub on its surface.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The failed terraforming biosphere is drifting the baselines on which Atlas-Bridge II was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-balanced: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Ash Meridian Navy and Helion Debt Synod both want the chain of authority. Helion Debt Synod refuses to recognize Ninth Ledger Office's authority. The compact between Glasshouse Biosafety Compact and Ninth Ledger Office has gone bad.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Ash Meridian Navy and Helion Debt Synod broke before the gate cooled, Ash Meridian Navy and Helion Debt Synod can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-cinematic: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Carrion Wake keeps the receipts. Vow-Breaker Wake keeps the witnesses. Between Pale Saint Pact and Vow-Breaker Wake the knife is already drawn. Brothers of Choir wants Carrion Wake to bleed first.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Between Carrion Wake and Vow-Breaker Wake the war is already lost; only the funerals remain.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-astronomy: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The black-market route beacon lattice drifts the baselines Aperture Trust relies on. The black-market route beacon lattice drifts the baselines Suhail-37 Belt VI relies on. The amplitude of the public festival tied to safe transit windows exceeds the operating envelope of Suhail-37 Belt VI. Suhail-37 Belt VI Reach is the only major foothold on Suhail-37 Belt VI.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Black-market route beacon lattice took shape in the long-baseline era, the black-market route beacon lattice is shifting the operating envelope Aperture Trust was calibrated against.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-balanced: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The narrow-AI perception fog keeps shifting under Wouri Survey-176 IV. Each pass of the moving bleed-node river costs Wouri Survey-176 II a margin it doesn't have. Wouri Survey-176 II can't plan around the narrow-AI perception fog anymore. Frozen refugee convoy sits on Wouri Survey-176 IV. Wouri Survey-176 IV hosts Wouri Survey-176 Station.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The narrow-AI perception fog is rewriting the constants Wouri Survey-176 IV was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-cinematic: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Tarandus Route-211 Belt IV has been watching the flare-amplified bleed season eat its margins for a generation. So of course, Carrion Synod swore the pact would hold; Last Ledger Brotherhood swore otherwise. And then, Something is wrong under Tarandus Route-211 VI, and failed iggygate wake is the name people whisper for it. Tarandus Route-211 VI hosts Tarandus Route-211 Habitat.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Flare-amplified bleed season took shape in the reckoning era, Everything Tarandus Route-211 Belt IV was built to outlast is being unmade by the flare-amplified bleed season.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > corner-frontier-cinematic-fracture-hub: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Last Ledger Cabal keeps the receipts. Long Knife Run keeps the witnesses. Between Bone Lantern Wake and Last Ledger Synod the knife is already drawn. Last Ledger Synod swore the pact would hold; Sisters of Synod swore otherwise. Pipit's Delta Anomaly IV Station draws everything it consumes from Illegal Sol-prohibited geometry sample. Pipit's Delta I Charter depends on Illegal Sol-prohibited geometry sample for everything.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Last Ledger Cabal and Long Knife Run broke in the silent decade, Between Last Ledger Cabal and Long Knife Run the war is already lost; only the funerals remain.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > corner-realistic-astronomy-low-sparse: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The amplitude of the debt-fleet anchor graveyard exceeds the operating envelope of Watch-Order Working Group. The narrow-AI perception fog drifts the baselines Guniibuu-Apdu Minor VII relies on. The debt-fleet anchor graveyard drifts the baselines Guniibuu-Apdu Minor VII relies on. Guniibuu-Apdu Minor VII carries Guniibuu-Apdu Minor VII - Moon I Hold on its surface.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Debt-fleet anchor graveyard took shape before the catalog was sealed, the debt-fleet anchor graveyard is drifting the baselines on which Watch-Order Working Group was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-crowded: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The debt-fleet anchor graveyard drifts the baselines Yuyu's Field II relies on. The debt-fleet anchor graveyard drifts the baselines Yuyu's Field VIII relies on. Yuyu's Field II records a phase shift each time the Gardener warning beacon passes through.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The debt-fleet anchor graveyard is drifting the baselines on which Yuyu's Field II was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-hub: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Catalog Bureau records a phase shift each time the refugee ark parking orbit passes through. Intan's Crown IV records a phase shift each time the moving bleed-node river passes through. The refugee ark parking orbit introduces a measurable perturbation in Intan's Crown V. Intan's Crown V - Moon I Habitat is the only major foothold on Intan's Crown V.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Refugee ark parking orbit took shape after the eighth pulse, the refugee ark parking orbit is drifting the baselines on which Catalog Bureau was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-normal: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The long-period comet storm drifts the baselines Coronagraph Bureau relies on. The amplitude of the long-period comet storm exceeds the operating envelope of Vey Picket-265 II. The chiral contamination bloom introduces a measurable perturbation in Vey Picket-265 II.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The long-period comet storm is drifting the baselines on which Coronagraph Bureau was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-sparse: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The chiral contamination bloom drifts the baselines Arneb Trace-209 III relies on. Arneb Trace-209 III records a phase shift each time the debt-fleet anchor graveyard passes through. The debt-fleet anchor graveyard drifts the baselines Long Baseline Authority relies on. Arneb Trace-209 III hosts Arneb Trace-209 III Station 85.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Chiral contamination bloom took shape before the catalog was sealed, the chiral contamination bloom is shifting the operating envelope Arneb Trace-209 III was calibrated against.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-fracture: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Glasshouse Biosafety Compact refuses to recognize Helion Debt Synod's authority. Ash Meridian Navy disputes Orison Route Authority's claim. The compact between Helion Debt Synod and Orison Route Authority has gone bad.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Glasshouse Biosafety Compact and Helion Debt Synod can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-high: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Kestrel Free Compact disputes Sepulcher Archive Court's claim. The compact between Sepulcher Archive Court and Veyra-Locke Concession has gone bad. Orison Route Authority refuses to recognize Veyra-Locke Concession's authority.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Kestrel Free Compact and Sepulcher Archive Court broke in the manifest wars, Kestrel Free Compact and Sepulcher Archive Court can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-low: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Helion Debt Synod and Red Vane Labor Combine both want the trade ledger. Ash Meridian Navy and Glasshouse Biosafety Compact both want the chain of authority. Helion Debt Synod refuses to recognize Kestrel Free Compact's authority.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Helion Debt Synod and Red Vane Labor Combine can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-normal: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Red Vane Labor Combine refuses to recognize Veyra-Locke Concession's authority. The compact between Orison Route Authority and Veyra-Locke Concession has gone bad. Kestrel Free Compact and Orison Route Authority both want the trade ledger.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Red Vane Labor Combine and Veyra-Locke Concession can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;
